tests/baselines/reference/ES5SymbolProperty2.errors.txt
tests/cases/conformance/Symbols/ES5SymbolProperty2.ts(10,11): error TS2693: 'Symbol' only refers to a type, but is being used as a value here.


==== tests/cases/conformance/Symbols/ES5SymbolProperty2.ts (1 errors) ====
    module M {
        var Symbol: any;
    
        export class C {
            [Symbol.iterator]() { }
        }
        (new C)[Symbol.iterator];
    }
    
    (new M.C)[Symbol.iterator];
              ~~~~~~
!!! error TS2693: 'Symbol' only refers to a type, but is being used as a value here.